# xdof-sim

./: .gitignore  README.md  pyproject.toml  setup.sh  sync_upstream.sh
.claude/skills/: sync-upstream
docs/: data_collection_randomization.md  dataset_export_workflow.md  render_speed_benchmark_20260411.md  render_speed_benchmark_20260411_224.md  xdof_data_layout.md
scripts/: benchmark_replay_rendering.py  mjteleop  regenerate_dishrack_plate_collisions.py
tests/: test_batched_env.py  test_collection_tasks.py  test_dataset_export_io.py  test_dataset_export_pipeline.py  test_dataset_export_s3_pipeline.py  test_dataset_export_s3_source.py  test_dataset_export_trajectory.py  test_randomization.py  test_replay_dataset.py  test_scene_xml.py  test_task_dashboard.py  test_task_eval.py  test_task_registry.py  test_task_specs.py  test_visualize_dishrack_variants.py  test_visualize_randomization.py  test_vr_streamer.py
xdof_sim/: __init__.py  batched_env.py  collection_tasks.py  config.py  env.py  randomization.py  scene_variants.py  scene_xml.py  task_registry.py  task_specs.py  transforms.py  viewer.py
xdof_sim/dataset_export/: __init__.py  cli.py  metadata.py  monitor.py  pipeline.py  render.py  s3_pipeline.py  s3_source.py  s3_utils.py  staging.py  subprocess_export.py  trajectory.py  types.py  video_io.py  writer.py
xdof_sim/debug/: __init__.py  task_dashboard.py
xdof_sim/examples/: replay_data.py  replay_demo.py  run_policy.py  teleop_sim.py  test_env.py  video_gallery.py  view.py  viser_ik_teleop.py  viser_replay.py  viser_teleop.py  visualize_randomization.py  (+4 more)
(+372 files in other folders)
